--- a/README.rdoc
+++ b/README.rdoc
@@ -1,9 +1,9 @@
 == README
 
 VJS is a web application that provides a framework to create the following pages easily for any school:
-	1. Introduction, Vision/Goals (HOME page)
-	2. Academic Information (Academics page)
-	3. Activity Information (Events page)
-	4. Detailed information about school (About Us page)
-	5. Contact information, Send Message (Contact Us page)
-	6. Admin Portal (Website Manager page)
+	* Introduction, Vision/Goals (HOME page)
+	* Academic Information (Academics page)
+	* Activity Information (Events page)
+	* Detailed information about school (About Us page)
+	* Contact information, Send Message (Contact Us page)
+	* Admin Portal (Website Manager page)
